# egg_recursive

./: .gitignore  Cargo.toml  README.md  deny.toml
egg_recursive/: Cargo.toml  README.md
egg_recursive/src/: lib.rs
egg_recursive/tests/: test.rs
egg_recursive/tests/invalid/language/: 01-generic-lang.rs  01-generic-lang.stderr  02-struct-lang.rs  02-struct-lang.stderr  03-invalid-children.rs  03-invalid-children.stderr  04-multiple-with-self.rs  04-multiple-with-self.stderr
egg_recursive/tests/success/: 01-derive-without-egg.rs
egg_recursive_derive/: Cargo.toml
egg_recursive_derive/src/: children.rs  language.rs  lib.rs  macros.rs  test_utils.rs
egg_recursive_derive/src/children/: tests.rs
egg_recursive_derive/src/children/snapshots/: egg_recursive_derive__children__tests__snapshot_derive_language_children_record.snap  egg_recursive_derive__children__tests__snapshot_derive_language_children_tuple.snap
egg_recursive_derive/src/language/: tests.rs
egg_recursive_derive/src/language/snapshots/: egg_recursive_derive__language__tests__snapshot_derive_language_priv.snap  egg_recursive_derive__language__tests__snapshot_derive_language_pub.snap  egg_recursive_derive__language__tests__snapshot_to_recursive_impl.snap
