[package]
name = "egg_recursive"
version.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
egg_recursive_derive = { path = "../egg_recursive_derive", version = "0.1.0" }
egg.workspace = true
functo_rs.workspace = true

[dev-dependencies]
egg.workspace = true
ordered-float.workspace = true
trybuild.workspace = true
