[package]
name = "egg_recursive_derive"
version.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
itertools.workspace = true
ident_case.workspace = true

[dev-dependencies]
insta.workspace = true
prettyplease.workspace = true
